# bart26g-spotoptim

./: .gitignore  Makefile  README.md  bart26g.bib  index.qmd  pyproject.toml
